--- a/dockerization/idp-service/Dockerfile-idp-service-cie-jdk
+++ b/dockerization/idp-service/Dockerfile-idp-service-cie-jdk
@@ -10,7 +10,7 @@ FROM us.gcr.io/platform-205701/ubi/ubi-java:8.8 as base
 # Add the capsule JAR and config.yml
 COPY --chown=65534:65534 idp-service-capsule.jar /opt/harness/
 COPY --chown=65534:65534 config.yml /opt/harness/
-#COPY --chown=65534:65534 redisson-jcache.yaml /opt/harness/
+COPY --chown=65534:65534 redisson-jcache.yaml /opt/harness/
 COPY --chown=65534:65534 protocol.info /opt/harness/
 COPY --chown=65534:65534 default.jfc /opt/harness/
 COPY --chown=65534:65534 profile.jfc /opt/harness/
