--- a/idp-service/src/main/java/io/harness/idp/pipeline/BUILD.bazel
+++ b/idp-service/src/main/java/io/harness/idp/pipeline/BUILD.bazel
@@ -12,7 +12,7 @@ java_library(
     visibility = ["//idp-service:__subpackages__"],
     deps = [
         "//:lombok",
-        '//879-pipeline-ci-commons:module',
+        "//879-pipeline-ci-commons:module",
         "//980-commons/src/main/java/io/harness/exception:module",
         "//clients/pipeline-service/pms-sdk:module",
         "//clients/pipeline-service/pms-sdk-core:module",
