feat: [PL-39670]: Setting default value of enableAuth to true.

--- a/310-iacm-manager/config/iacm-manager-config.yml
+++ b/310-iacm-manager/config/iacm-manager-config.yml
@@ -59,7 +59,7 @@ iacmmanager-mongo:
   indexManagerMode: AUTO
   aliasDBName: iacm-harness
 
-enableAuth: false
+enableAuth: true
 
 logServiceConfig:
   baseUrl: https://qa.harness.io/log-service/
