--- a/332-ci-manager/config/ci-manager-config.yml
+++ b/332-ci-manager/config/ci-manager-config.yml
@@ -96,7 +96,7 @@ pmsMongo:
   indexManagerMode: AUTO
   aliasDBName: pms-harness
 
-enableAuth: false
+enableAuth: true
 
 scmConnectionConfig:
   url: localhost:8091
