feat: [CDS-69936]: UT added

--- a/pipeline-service/modules/ng-triggers/src/test/resources/ng-trigger-github-filePath-pr-v2.yaml
+++ b/pipeline-service/modules/ng-triggers/src/test/resources/ng-trigger-github-filePath-pr-v2.yaml
@@ -48,7 +48,7 @@ trigger:
               operator: Equals
               value: File1_Removed.txt
           headerConditions:
-            - key: h1
+            - key: <+trigger.header['h1']>
               operator: Equals
               value: v1
           jexlCondition: true
