--- a/product/log-service/stream/redis/BUILD.bazel
+++ b/product/log-service/stream/redis/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
         "//product/log-service/stream",
         "@com_github_go_co_op_gocron//:gocron",
         "@com_github_pkg_errors//:errors",
-        "@com_github_redis_go_redis_v9//:go_default_library",
+        "@com_github_redis_go_redis_v9//:redis",
         "@com_github_sirupsen_logrus//:logrus",
     ],
 )
@@ -27,7 +27,7 @@ go_test(
         "//product/log-service/stream",
         "@com_github_alicebob_miniredis_v2//:miniredis",
         "@com_github_go_redis_redismock_v8//:redismock",
-        "@com_github_redis_go_redis_v9//:go_default_library",
+        "@com_github_redis_go_redis_v9//:redis",
         "@com_github_stretchr_testify//assert",
     ],
 )
