--- a/product/log-service/store/s3/BUILD.bazel
+++ b/product/log-service/store/s3/BUILD.bazel
@@ -13,11 +13,11 @@ go_library(
     deps = [
         "//product/log-service/store",
         "@com_github_aws_aws_sdk_go_v2//aws",
-        "@com_github_aws_aws_sdk_go_v2//config",
-        "@com_github_aws_aws_sdk_go_v2//credentials",
-        "@com_github_aws_aws_sdk_go_v2//feature/s3/manager",
-        "@com_github_aws_aws_sdk_go_v2//service/s3",
-        "@com_github_aws_aws_sdk_go_v2//service/s3/types",
+        "@com_github_aws_aws_sdk_go_v2_config//:config",
+        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
+        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
+        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
+        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
     ],
 )
 
