--- a/idp-service/src/main/java/io/harness/idp/envvariable/BUILD.bazel
+++ b/idp-service/src/main/java/io/harness/idp/envvariable/BUILD.bazel
@@ -16,6 +16,7 @@ java_library(
         "//:lombok",
         "//930-ng-core-clients:module",
         "//940-secret-manager-client:module",
+        "//945-account-mgmt:module",
         "//960-persistence/src/main/java/io/harness/annotation:module",
         "//960-persistence/src/main/java/io/harness/mongo/index:module",
         "//960-persistence/src/main/java/io/harness/ng:module",
