feat: [CDS-70209]: Validating and resolving multiple helm chart manifests.

--- a/127-cd-nextgen-entities/src/test/resources/service/service-with-primaryManifestRef-Kubernetes.yaml
+++ b/127-cd-nextgen-entities/src/test/resources/service/service-with-primaryManifestRef-Kubernetes.yaml
@@ -39,7 +39,7 @@ service:
               skipResourceVersioning: false
         - manifest:
             identifier: mani_i2
-            type: K8sManifest
+            type: HelmChart
             spec:
               store:
                 type: Harness
