--- a/idp-service/src/main/java/io/harness/idp/pipeline/BUILD.bazel
+++ b/idp-service/src/main/java/io/harness/idp/pipeline/BUILD.bazel
@@ -12,6 +12,8 @@ java_library(
     visibility = ["//idp-service:__subpackages__"],
     deps = [
         "//:lombok",
+        "//332-ci-manager/contracts:module",
+        "//332-ci-manager/service:module",
         "//879-pipeline-ci-commons:module",
         "//980-commons/src/main/java/io/harness/exception:module",
         "//clients/pipeline-service/pms-sdk:module",
