--- a/idp-service/src/main/java/io/harness/idp/serializer/BUILD.bazel
+++ b/idp-service/src/main/java/io/harness/idp/serializer/BUILD.bazel
@@ -18,6 +18,7 @@ java_binary(
         "//idp-service/src/main/java/io/harness/idp/envvariable:module",
         "//idp-service/src/main/java/io/harness/idp/namespace:module",
         "//idp-service/src/main/java/io/harness/idp/onboarding:module",
+        "//idp-service/src/main/java/io/harness/idp/pipeline:module",
         "//idp-service/src/main/java/io/harness/idp/plugin:module",
         "//idp-service/src/main/java/io/harness/idp/settings:module",
         "//idp-service/src/main/java/io/harness/idp/status:module",
