--- a/idp-service/src/main/java/io/harness/idp/envvariable/BUILD.bazel
+++ b/idp-service/src/main/java/io/harness/idp/envvariable/BUILD.bazel
@@ -26,9 +26,11 @@ java_library(
         "//999-annotations:module",
         "//idp-service/contracts/openapi/v1:idp-service-server-spec-module",
         "//idp-service/src/main/java/io/harness/idp/common:module",
+        "//idp-service/src/main/java/io/harness/idp/common/encryption:module",
         "//idp-service/src/main/java/io/harness/idp/events/producers:module",
         "//idp-service/src/main/java/io/harness/idp/k8s:module",
         "//idp-service/src/main/java/io/harness/idp/namespace:module",
+        "@maven//:com_google_code_gson_gson",
         "@maven//:com_google_inject_guice",
         "@maven//:javax_validation_validation_api",
         "@maven//:javax_ws_rs_javax_ws_rs_api",
