--- a/360-cg-manager/config.yml
+++ b/360-cg-manager/config.yml
@@ -760,7 +760,7 @@ dataReconciliation:
 
 disableDelegateMgmtInManager: false
 
-enableRedisForDelegateService: ${ENABLE_REDIS_DELEGATE_SERVICE:-false}
+enableRedisForDelegateService: true
 
 runScheduleJobsInManagerIteratorOnly: ${RUN_SCHEDULE_JOBS:-true}
 
