--- a/dockerization/base-images/ubi-base-cie-agents/code-format/Dockerfile-code-format-cie-agent
+++ b/dockerization/base-images/ubi-base-cie-agents/code-format/Dockerfile-code-format-cie-agent
@@ -13,7 +13,7 @@
 #     -t <tag> \
 #     .
 
-FROM us.gcr.io/platform-205701/ubi/cie-agents/java-go-cie-agent:latest
+FROM us.gcr.io/platform-205701/ubi/cie-agents/java-go-cie-agent:java-17.0.7_7
 
 USER root
 
