--- a/dockerization/base-images/Dockerfile-ubi-java-base
+++ b/dockerization/base-images/Dockerfile-ubi-java-base
@@ -14,6 +14,6 @@
 #     .
 
 FROM us.gcr.io/platform-205701/ubi/ubi-base:8.8
-RUN curl -OL https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.7%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz && mkdir -p /opt/harness/OpenJDK17 && tar -xzf OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz -C /opt/harness/OpenJDK17 && ls -al /opt/harness/OpenJDK17/jdk-17.0.7+7 && /opt/harness/OpenJDK17/jdk-17.0.7+7/bin/java -version && OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz
+RUN curl -OL https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.7%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz && mkdir -p /opt/harness/OpenJDK17 && tar -xzf OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz -C /opt/harness/OpenJDK17 && ls -al /opt/harness/OpenJDK17/jdk-17.0.7+7 && /opt/harness/OpenJDK17/jdk-17.0.7+7/bin/java -version &&  rm -rf OpenJDK17U-jdk_x64_linux_hotspot_17.0.7_7.tar.gz
 ENV JAVA_HOME=/opt/harness/OpenJDK17/jdk-17.0.7+7
 ENV PATH=$JAVA_HOME/bin:$PATH
