feat: [IDP-724]: stage

--- a/332-ci-manager/config/ci-manager-config.yml
+++ b/332-ci-manager/config/ci-manager-config.yml
@@ -181,7 +181,7 @@ ciExecutionServiceConfig:
   delegateServiceEndpointVariableValue: "delegate-service:8080"
   addonImage: harness/ci-addon:1.16.19
   liteEngineImage: harness/ci-lite-engine:1.16.19
-  isLocal: false
+  isLocal: true
   remoteDebugTimeout: 3600
   cacheIntelligenceConfig:
     bucket: "gcp_bucket"
@@ -419,7 +419,7 @@ pmsGrpcClientConfig:
 
 apiUrl: https://localhost:8181/#/
 
-shouldConfigureWithPMS: ${SHOULD_CONFIGURE_WITH_PMS:-false}
+shouldConfigureWithPMS: ${SHOULD_CONFIGURE_WITH_PMS:-true}
 
 enableDashboardTimescale: false
 
