--- a/950-events-framework-monitor/BUILD.bazel
+++ b/950-events-framework-monitor/BUILD.bazel
@@ -7,7 +7,7 @@ load("@rules_java//java:defs.bzl", "java_binary")
 load("//:tools/bazel/GenTestRules.bzl", "run_tests")
 load("//:tools/bazel/macros.bzl", "run_analysis")
 
-HarnessTeam = "PL"
+HarnessTeam = "PLteam"
 
 java_binary(
     name = "module",
