feat: [PL-39670]: Refactored code.

--- a/310-iacm-manager/config/iacm-manager-config.yml
+++ b/310-iacm-manager/config/iacm-manager-config.yml
@@ -74,7 +74,7 @@ redisLockConfig:
   userName: ""
   password: ""
 
-enableAuth: true
+enableAuth: ${ENABLE_AUTH:-true}
 
 distributedLockImplementation: MONGO
 
