fix: test-cache: modified cache to hazelcast in ng-manager

--- a/120-ng-manager/config.yml
+++ b/120-ng-manager/config.yml
@@ -441,7 +441,7 @@ signupNotificationConfiguration:
   expireDurationInMinutes: 60
 
 cacheConfig:
-  cacheBackend: REDIS
+  cacheBackend: HAZELCAST
   cacheNamespace: ""
   disabledCaches: [ ]
   enterpriseCacheEnabled: true
