--- a/260-delegate/dw-config-delegate.yml
+++ b/260-delegate/dw-config-delegate.yml
@@ -16,6 +16,7 @@ logging:
 accountId: kmpySmUISimoRrJL6NL73w
 delegateToken: 2f6b0988b6fb3370073c3d0505baee59
 managerUrl: https://localhost:9090/api/
+dmsUrl: http://localhost:3458/api/
 verificationServiceUrl: https://localhost:7070/verification/
 cvNextGenUrl: https://localhost:6060/cv/api/
 logStreamingServiceBaseUrl: http://localhost:8079
