--- a/419-delegate-service-app/config/config.yml
+++ b/419-delegate-service-app/config/config.yml
@@ -97,3 +97,20 @@ redisLockConfig:
   readMode: MASTER
   nettyThreads: 16
   useScriptCache: true
+
+redisDelegateConfig:
+  sentinel: false
+  masterName: "test"
+  redisUrl: "redis://localhost:6379"
+  sentinelUrls:
+    - "redis://redis1:26379"
+    - "redis://redis2:26379"
+    - "redis://redis3:26379"
+  envNamespace: ""
+  readMode: MASTER
+  nettyThreads: 16
+  useScriptCache: true
+
+logStreamingServiceConfig:
+  baseUrl: http://localhost:8079
+  serviceToken: token
