--- a/419-delegate-service-app/src/main/java/io/harness/dms/app/BUILD.bazel
+++ b/419-delegate-service-app/src/main/java/io/harness/dms/app/BUILD.bazel
@@ -54,9 +54,8 @@ java_library(
         "@maven//:javax_activation_activation",
         "@maven//:javax_xml_bind_jaxb_api",
         "//419-delegate-service-app/src/main/java/io/harness/dms/module",
-        "//419-delegate-service-app/src/main/java/io/harness/dms/configuration:module",
         "//419-delegate-service-app/src/main/java/io/harness/dms/health:module",
-        "//419-delegate-service-app/src/main/java/io/harness/dms/resource:module",
+        "//419-delegate-service-app/src/main/java/io/harness/dms/resource:module"
     ],
 )
 
