--- a/419-delegate-service-app/src/main/java/io/harness/dms/resource/BUILD.bazel
+++ b/419-delegate-service-app/src/main/java/io/harness/dms/resource/BUILD.bazel
@@ -16,8 +16,10 @@ java_library(
         "//420-delegate-service:module",
         "//940-feature-flag:module",
         "//956-feature-flag-beans:module",
+        "//980-commons/src/main/java/software/wings/jersey:module",
         "//980-commons/src/main/java/io/harness/rest:module",
         "//980-commons/src/main/java/io/harness/security/annotations:module",
+         "//980-commons/src/main/java/io/harness/serializer/kryo:module",
         "@maven//:com_google_inject_guice",
         "@maven//:commons_collections_commons_collections",
         "@maven//:io_dropwizard_metrics_metrics_annotation",
