--- a/charts/bootstrap/database/timescaledb/values.yaml
+++ b/charts/bootstrap/database/timescaledb/values.yaml
@@ -32,7 +32,7 @@ image:
 curlImage:
   registry: docker.io
   repository: curlimages/curl
-  tag: "latest"
+  tag: "8.1.2"
   pullPolicy: Always
   digest: ""
   imagePullSecrets: []
@@ -433,7 +433,6 @@ fullWalPrevention:
 
 resources: {}
 #  limits:
-#    cpu: "1"
 #    memory: "2048Mi"
 #  requests:
 #    cpu: "1"
