--- a/charts/bootstrap/database/values.yaml
+++ b/charts/bootstrap/database/values.yaml
@@ -21,6 +21,8 @@ minio:
     size: 200Gi
   auth:
     existingSecret: "minio"
+  image:
+    tag: 2023.5.18-debian-11-r2
 # -- configurations for mongodb
 mongodb:
   architecture: replicaset
@@ -28,7 +30,7 @@ mongodb:
   image:
     registry: docker.io
     repository: harness/mongo
-    tag: 4.4.19
+    tag: 4.4.22
   replicaCount: 3
   arbiter:
     enabled: true
@@ -51,7 +53,7 @@ postgresql:
   image:
     registry: docker.io
     repository: bitnami/postgresql
-    tag: 14.7.0-debian-11-r26
+    tag: "14.8.0-debian-11-r17"
     digest: ""
   fullnameOverride: "postgres"
   auth:
