feat: [BT-4639]: Onboarding modules with nested Bazel files for sonar.

--- a/960-api-services/BUILD.bazel
+++ b/960-api-services/BUILD.bazel
@@ -265,3 +265,12 @@ java_library(
 )
 
 run_tests()
+
+run_analysis(
+    sonarqube_srcs = [
+      "//960-api-services/src/main/java/io/harness/adfs:java_srcs",
+      "//960-api-services/src/main/java/io/harness/artifactory:java_srcs",
+      "//960-api-services/src/main/java/io/harness/artifactory/service:java_srcs",
+      "//960-api-services/src/main/java/io/harness/artifacts/ami/beans:java_srcs",
+    ],
+)
