feat: [CDS-74501]: Create slack service and add it to platform service

--- a/platform-service/config/config.yml
+++ b/platform-service/config/config.yml
@@ -238,6 +238,9 @@ resourceGroupServiceConfig:
 
   enableOpentelemetry: false
 
+slackServiceConfig:
+  enableSlackModule: false
+
 hostname: ${HOSTNAME:-localhost}
 
 basePathPrefix: ${BASE_PATH_PREFIX:-""}
