--- a/platform-service/service/BUILD.bazel
+++ b/platform-service/service/BUILD.bazel
@@ -61,6 +61,7 @@ java_binary(
         "//platform-service/modules/resource-group-service/contracts/src/main/java/io/harness/resourcegroup:module",
         "//platform-service/modules/resource-group-service/contracts/src/main/java/io/harness/resourcegroup/v1/remote/dto:module",
         "//platform-service/modules/resource-group-service/contracts/src/main/java/io/harness/resourcegroup/v2/remote/dto:module",
+        "//platform-service/modules/slack-service:module",
         "@maven//:aopalliance_aopalliance",
         "@maven//:cglib_cglib_nodep",
         "@maven//:ch_qos_logback_contrib_logback_jackson",
