feat: [IDP-850]: Incase of secretText for privateKey, handle it properly as we store without line breaks in SM (#50880)
* feat: [IDP-850]: Incase of secretText for privateKey, handle it properly as we store without line breaks in SM

* Increment patch version

* gitleaksignore changes for private key placeholder

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -2739,3 +2739,5 @@ a713baa1078b711fa78817ef316247e41e47804a:batch-processing/chart/templates/config
 cb04e6dfddaf18a45690bdc194f5b93fa562a6e4:120-ng-manager/config.yml:generic-api-key:59
 fdc9b219d20135e79d5754237912ac7f0d7911e9:platform-service/config/config.yml:generic-api-key:173
 fdc9b219d20135e79d5754237912ac7f0d7911e9:platform-service/service/src/test/resources/test-config.yml:generic-api-key:155
+dbfa3ac7fa46286e67f6a16e5c3f82aa7296eecd:idp-service/src/main/java/io/harness/idp/common/Constants.java:private-key:29
+dbfa3ac7fa46286e67f6a16e5c3f82aa7296eecd:idp-service/src/main/java/io/harness/idp/common/Constants.java:private-key:30
