feat:[CDS-74713]: serverless print not working because of memory

--- a/125-cd-nextgen/src/main/resources/executionStrategyYaml/serverlessawslambda-basic-plugin.yaml
+++ b/125-cd-nextgen/src/main/resources/executionStrategyYaml/serverlessawslambda-basic-plugin.yaml
@@ -24,6 +24,9 @@ spec:
                   connectorRef: account.harnessImage
                   image: harnessdev/serverless-preparerollback:1.82.0-latest
                   imagePullPolicy: Always
+                  resources:
+                    limits:
+                      memory: 2G
             - step:
                 identifier: Serverless_Aws_Lambda_Package
                 type: ServerlessAwsLambdaPackageV2
