--- a/dockerization/base-images/Dockerfile-ubi-python-base
+++ b/dockerization/base-images/Dockerfile-ubi-python-base
@@ -13,7 +13,7 @@
 #     -t <tag> \
 #     .
 # Python Application runtime base image
-FROM us.gcr.io/platform-205701/ubi/ubi-base:8.8
+FROM us.gcr.io/platform-205701/harness/ubi88/ubi-base:snapshot-2023-07-26T0503
 
 USER root
 
