fix: [CDS-71966]: test failures

--- a/980-commons/src/main/resources/response_messages.properties
+++ b/980-commons/src/main/resources/response_messages.properties
@@ -266,6 +266,7 @@ GIT_OPERATION_ERROR=${message}
 TASK_FAILURE_ERROR=${message}
 INSTANCE_STATS_PROCESS_ERROR=${message}
 INSTANCE_STATS_MIGRATION_ERROR=${message}
+INSTANCE_STATS_DELETION_ERROR=${message}
 DEPLOYMENT_MIGRATION_ERROR=${message}
 INSTANCE_STATS_AGGREGATION_ERROR=${message}
 UNRESOLVED_EXPRESSIONS_ERROR=Some expressions couldn't be evaluated: ${expressions}
