--- a/dockerization/base-images/Dockerfile-ubi-go1.20.5-base
+++ b/dockerization/base-images/Dockerfile-ubi-go1.20.5-base
@@ -13,7 +13,7 @@
 #     -t <tag> \
 #     .
 
-FROM us.gcr.io/platform-205701/harness/ubi88/ubi-base:snapshot-2023-07-26T0503
+FROM us.gcr.io/platform-205701/harness/ubi88/ubi-base:8.8
 
 USER root
 
