--- a/970-api-services-beans/BUILD.bazel
+++ b/970-api-services-beans/BUILD.bazel
@@ -50,6 +50,7 @@ java_library(
         "//970-api-services-beans/src/main/java/io/harness/k8s/exception:module",
         "//970-api-services-beans/src/main/java/io/harness/k8s/manifest:module",
         "//970-api-services-beans/src/main/java/io/harness/k8s/model:module",
+        "//970-api-services-beans/src/main/java/io/harness/k8s/model/customObjects:module",
         "//970-api-services-beans/src/main/java/io/harness/k8s/model/harnesscrds:module",
         "//970-api-services-beans/src/main/java/io/harness/k8s/model/response:module",
         "//970-api-services-beans/src/main/java/io/harness/k8s/utils:module",
