--- a/419-delegate-service-app/config/config.yml
+++ b/419-delegate-service-app/config/config.yml
@@ -135,3 +135,19 @@ redisDelegateConfig:
 logStreamingServiceConfig:
   baseUrl: http://localhost:8079
   serviceToken: token
+
+eventsFramework:
+  redis:
+    sentinel: false
+    masterName: "test"
+    redisUrl: "redis://localhost:6379"
+    sentinelUrls:
+      - "redis://redis1:26379"
+      - "redis://redis2:26379"
+      - "redis://redis3:26379"
+    envNamespace: ""
+    readMode: MASTER
+    nettyThreads: 16
+    useScriptCache: true
+    userName: ""
+    password: ""
