--- a/access-control/libs/core/BUILD.bazel
+++ b/access-control/libs/core/BUILD.bazel
@@ -17,12 +17,17 @@ java_library(
     ],
     deps = [
         "//:lombok",
+        "//930-ng-core-clients:module",
+        "//955-outbox-sdk:module",
         "//959-ng-persistence:module",
         "//970-ng-commons:module",
         "//980-commons:module",
         "//999-annotations:module",
         "//access-control/contracts:module",
+        "//clients/audit:module",
+        "//platform-service/modules/audit-service/contracts:module",
         "@maven//:com_fasterxml_jackson_core_jackson_annotations",
+        "@maven//:com_fasterxml_jackson_core_jackson_databind",
         "@maven//:com_google_code_findbugs_annotations",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_inject_guice",
@@ -53,10 +58,14 @@ java_library(
     deps = [
         ":module",
         "//:lombok",
+        "//930-ng-core-clients:module",
+        "//955-outbox-sdk:module",
         "//960-persistence:supporter-test",
         "//980-commons:module",
         "//990-commons-test:module",
         "//999-annotations:module",
+        "//clients/audit:module",
+        "//platform-service/modules/audit-service/contracts:module",
         "@maven//:com_google_code_findbugs_annotations",
         "@maven//:com_google_inject_guice",
         "@maven//:junit_junit",
