--- a/dockerization/base-images/ubi-base-cie-agents/java-go/Dockerfile-java-go-cie-agent
+++ b/dockerization/base-images/ubi-base-cie-agents/java-go/Dockerfile-java-go-cie-agent
@@ -75,10 +75,10 @@ RUN yum install -y nodejs python mongodb-org-shell google-cloud-cli autoconf bin
 
 CMD [ "/deployments/run-java.sh" ]
 
-RUN curl -O https://dl.google.com/go/go1.18.linux-amd64.tar.gz \
-    && tar -xvf go1.18.linux-amd64.tar.gz \
+RUN curl -OL https://go.dev/dl/go1.20.5.linux-amd64.tar.gz \
+    && tar -xvf go1.20.5.linux-amd64.tar.gz \
     && mv go/ /usr/local/ \
-    && rm -rf go1.18.linux-amd64.tar.gz
+    && rm -rf go1.20.5.linux-amd64.tar.gz
 
 ENV PATH ${PATH}:/opt/gsutil:/usr/local/go/bin:/opt/sonar-scanner-${SONARQUBE_VERSION}-linux/bin
 
