--- a/332-ci-manager/config/manifest.yaml
+++ b/332-ci-manager/config/manifest.yaml
@@ -1,3 +1,3 @@
 DOCKER_FILE_PATH: /harness/harness-core/332-ci-manager/build/container/Dockerfile-ci-manager-multistage
-CONTEXT_PATH: /harness/harness-core
+CONTEXT_PATH: /harness/harness-core/dist/ci-manager
 HELM_CHART_SOURCE_DIRECTORY: harness-core/332-ci-manager/chart
