fix: [CDS-75153]: Return ManifestsData

--- a/125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps/BUILD.bazel
+++ b/125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps/BUILD.bazel
@@ -18,6 +18,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//:lombok",
+        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/beans:module",
         "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/mappers:module",
         "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps/outcome:module",
         "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps/output:module",
