--- a/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
+++ b/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
@@ -30,17 +30,21 @@ COPY --chown=65534:65534--from=builder \
   /app/dist/migrator/keystore.jks \
   /app/dist/migrator/config.yml \
   /app/dist/migrator/redisson-jcache.yaml \
-  /app/dist/migrator/ protocol.info \
+  /app/dist/migrator/protocol.info \
   /app/dist/migrator/default.jfc \
   /app/dist/migrator/profile.jfc \
   /app/dist/migrator/scripts \
   /app/dockerization/base-images/apm/*.sh \
   /opt/harness/
 
+WORKDIR /opt/harness
 RUN ls /opt/harness/
 RUN chmod +x /opt/harness/*.sh
 CMD [ "/opt/harness/run.sh" ]
-
+USER root
+RUN microdnf install -y yum
+RUN yum -y install fontconfig dejavu-sans-fonts wget
+RUN chmod +x /usr/bin/yq
 
 ############################ON PREM#########################
 FROM base as onprem
