--- a/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
+++ b/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
@@ -25,27 +25,33 @@ FROM us.gcr.io/platform-205701/ubi/ubi-java:8.8 as base
 
 # Add the capsule JAR and config.yml
 COPY --chown=65534:65534--from=builder \
-  /app/dist//migrator-capsule.jar \
-  /app/dist/migrator/newrelic.yml \
-  /app/dist/migrator/keystore.jks \
-  /app/dist/migrator/config.yml \
-  /app/dist/migrator/redisson-jcache.yaml \
-  /app/dist/migrator/protocol.info \
-  /app/dist/migrator/default.jfc \
-  /app/dist/migrator/profile.jfc \
-  /app/dist/migrator/scripts \
+  /app/dist/100-migrator/migrator-capsule.jar \
+  /app/dist/100-migrator/newrelic.yml \
+  /app/dist/100-migrator/keystore.jks \
+  /app/dist/100-migrator/config.yml \
+  /app/dist/100-migrator/redisson-jcache.yaml \
+  /app/dist/100-migrator/ protocol.info \
+  /app/dist/100-migrator/default.jfc \
+  /app/dist/100-migrator/profile.jfc \
+  /app/dist/100-migrator/scripts \
   /app/dockerization/base-images/apm/*.sh \
   /opt/harness/
 
-WORKDIR /opt/harness
-RUN ls /opt/harness/
-RUN chmod +x /opt/harness/*.sh
-CMD [ "./run.sh" ]
+USER root
+RUN microdnf install -y yum
+RUN yum -y install fontconfig dejavu-sans-fonts wget
+RUN chmod +x /usr/bin/yq
 USER root
 RUN microdnf install -y yum
 RUN yum -y install fontconfig dejavu-sans-fonts wget
 RUN chmod +x /usr/bin/yq
 
+RUN chmod +x /opt/harness/*.sh
+
+WORKDIR /opt/harness
+RUN ls /opt/harness/
+
+CMD [ "./run.sh" ]
 ############################ON PREM#########################
 FROM base as onprem
 RUN /opt/harness/inject-onprem-apm-bins-into-dockerimage.sh && rm /opt/harness/inject-onprem-apm-bins-into-dockerimage.sh
