--- a/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
+++ b/dockerization/migrator/Dockerfile-migrator-cie-multistage-jdk
@@ -14,6 +14,7 @@ ENV SERVICE_NAME="migrator"
 WORKDIR /app
 
 ENV BUILD_PURPOSE=DEVELOPMENT
+ENV PLATFORM="jenkins"
 
 RUN chmod +x \
  /app/build/feature_build.sh \
