feat: [CET-1349] Add pipeline variables for CET collector URL & agent token

--- a/pipeline-service/chart/templates/config.yaml
+++ b/pipeline-service/chart/templates/config.yaml
@@ -63,6 +63,7 @@ data:
   {{- end }}
   ENABLE_AUDIT : 'true'
   AUDIT_SERVICE_BASE_URL: http://platform-service:9005/api/
+  ERROR_TRACKING_SERVICE_BASE_URL: http://error-tracking-svc:9191/api/
   LOG_STREAMING_CONTAINER_STEP_BASE_URL: '{{ .Values.global.loadbalancerURL }}/log-service/'
   ALLOWED_ORIGINS: '{{ .Values.allowedOrigins | default .Values.global.loadbalancerURL }}'
   {{- if .Values.additionalConfigs }}
