--- a/product/log-service/config/manifest.yaml
+++ b/product/log-service/config/manifest.yaml
@@ -1,3 +1,3 @@
-BUILD_SCRIPT_PATH: log-service/build/feature_build.sh
-DOCKER_FILE_PATH: /harness/harness-core/product/log-service/docker/Dockerfile
+DOCKER_FILE_PATH: /harness/harness-core/product/log-service/docker/Dockerfile-log-service-multistage
+CONTEXT_PATH: $(bazelisk info bazel-bin)/product/log-service
 HELM_CHART_SOURCE_DIRECTORY: harness-core/product/log-service/chart
