--- a/product/log-service/config/manifest.yaml
+++ b/product/log-service/config/manifest.yaml
@@ -1,3 +1,3 @@
 DOCKER_FILE_PATH: /harness/harness-core/product/log-service/docker/Dockerfile-logservice-multistage
-CONTEXT_PATH: /root/.cache/bazel/_bazel_root/e85355a115859841eef4526236539ac3/execroot/harness_monorepo/bazel-out/k8-fastbuild/bin/product/log-service
+CONTEXT_PATH: /harness/harness-core
 HELM_CHART_SOURCE_DIRECTORY: harness-core/product/log-service/chart
