feat[IE-338]: draft checkin for supporting docker build args for a service

--- a/platform-service/config/manifest.yaml
+++ b/platform-service/config/manifest.yaml
@@ -1,3 +1,6 @@
 DOCKER_FILE_PATH: /harness/harness-core/platform-service/build/container/Dockerfile-platform-service-multistage
 CONTEXT_PATH: /harness/harness-core
 HELM_CHART_SOURCE_DIRECTORY: harness-core/platform-service/chart
+BUILD_ARGS:
+  ARG1: abc
+  ARG2: def
