--- a/120-ng-manager/BUILD.bazel
+++ b/120-ng-manager/BUILD.bazel
@@ -80,6 +80,7 @@ shared_dependencies = [
     "//clients/pipeline-service/pms-client:module",
     "//clients/servicediscovery:module",
     "//clients/ngsettings:module",
+    "//clients/error-tracking:module",
     "//product/ci/scm/proto:ciscm_java_proto",
     "@maven//:net_rcarz_jira_client",
     "@maven//:aopalliance_aopalliance",
