feat: [CODE-760]: harness code status check

--- a/960-api-services/BUILD.bazel
+++ b/960-api-services/BUILD.bazel
@@ -66,6 +66,7 @@ java_library(
         "//960-api-services/src/main/java/io/harness/cistatus/service:module",
         "//960-api-services/src/main/java/io/harness/cistatus/service/azurerepo:module",
         "//960-api-services/src/main/java/io/harness/cistatus/service/bitbucket:module",
+        "//960-api-services/src/main/java/io/harness/cistatus/service/harness:module",
         "//960-api-services/src/main/java/io/harness/cistatus/service/gitlab:module",
         "//960-api-services/src/main/java/io/harness/cli:module",
         "//960-api-services/src/main/java/io/harness/delegate/beans/artifact:module",
@@ -322,6 +323,7 @@ file_srcs = [
     "//960-api-services/src/main/java/io/harness/cistatus/service:java_srcs",
     "//960-api-services/src/main/java/io/harness/cistatus/service/azurerepo:java_srcs",
     "//960-api-services/src/main/java/io/harness/cistatus/service/bitbucket:java_srcs",
+    "//960-api-services/src/main/java/io/harness/cistatus/service/harness:java_srcs",
     "//960-api-services/src/main/java/io/harness/cistatus/service/gitlab:java_srcs",
     "//960-api-services/src/main/java/io/harness/cli:java_srcs",
     "//960-api-services/src/main/java/io/harness/delegate/beans/artifact:java_srcs",
