--- a/clients/pipeline-service/pms-client/BUILD.bazel
+++ b/clients/pipeline-service/pms-client/BUILD.bazel
@@ -21,6 +21,7 @@ java_library(
         "//980-commons:module",
         "//999-annotations:module",
         "//pipeline-service/modules/pms-contracts:module",
+        "//pipeline-service/contracts:module",
         "@maven//:ch_qos_logback_logback_access",
         "@maven//:ch_qos_logback_logback_classic",
         "@maven//:ch_qos_logback_logback_core",
