feat: [IDP-943]: Added exception handeling and did local testing

--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -383,7 +383,7 @@ redisLockConfig:
 
 distributedLockImplementation: REDIS
 
-enableDashboardTimescale: true
+enableDashboardTimescale: false
 
 timescaledb:
   timescaledbUrl: "jdbc:postgresql://localhost:5432/harness"
