--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -387,8 +387,8 @@ enableDashboardTimescale: false
 
 timescaledb:
   timescaledbUrl: "jdbc:postgresql://localhost:5432/harness"
-  timescaledbUsername: "admin"
-  timescaledbPassword: "password"
+  timescaledbUsername: "postgres"
+  timescaledbPassword: ""
   connectTimeout: 10
   socketTimeout: 30
   logUnclosedConnections: false
