--- a/960-api-services/src/main/java/io/harness/cistatus/service/BUILD.bazel
+++ b/960-api-services/src/main/java/io/harness/cistatus/service/BUILD.bazel
@@ -6,29 +6,24 @@
 load("@rules_java//java:defs.bzl", "java_library")
 load("//:tools/bazel/macros.bzl", "run_analysis_per_module")
 
-filegroup(
-    name = "java_srcs",
-    srcs = glob(["*.java"]),
-    visibility = ["//visibility:public"],
-)
-
 java_library(
     name = "module",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//:lombok",
         "//970-api-services-beans/src/main/java/io/harness/cistatus:module",
         "//970-api-services-beans/src/main/java/io/harness/gitpolling/github:module",
         "//970-ng-commons/src/main/java/io/harness/remote/client:module",
         "//980-commons/src/main/java/io/harness/exception:module",
         "//980-commons/src/main/java/io/harness/network:module",
         "//980-commons/src/main/java/io/harness/threading:module",
+        "//:lombok",
         "@maven//:com_auth0_java_jwt",
         "@maven//:com_fasterxml_jackson_core_jackson_core",
         "@maven//:com_fasterxml_jackson_core_jackson_databind",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_inject_guice",
+        "@maven//:com_squareup_okhttp3_okhttp",
         "@maven//:com_squareup_retrofit2_converter_jackson",
         "@maven//:com_squareup_retrofit2_retrofit",
         "@maven//:commons_codec_commons_codec",
