fix coalesce.go:220: warning: cannot overwrite table

--- a/315-sto-manager/chart/values.yaml
+++ b/315-sto-manager/chart/values.yaml
@@ -20,7 +20,7 @@ global:
     virtualService:
       hosts:
       - ''
-      gateways: {}
+      gateways: []
   ingress:
     enabled: false
     objects:
