--- a/pipeline-service/modules/pms-contracts/src/main/proto/BUILD.bazel
+++ b/pipeline-service/modules/pms-contracts/src/main/proto/BUILD.bazel
@@ -22,6 +22,7 @@ proto_library(
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:timestamp_proto",
         "@com_google_protobuf//:wrappers_proto",
+        "@com_google_protobuf//:struct_proto"
     ],
 )
 
