--- a/332-ci-manager/config/ci-manager-config.yml
+++ b/332-ci-manager/config/ci-manager-config.yml
@@ -501,3 +501,10 @@ featureFlagConfig:
   syncFeaturesToCF: false
 
 enableQueue: ${ENABLE_QUEUE:-false}
+
+streamPerServiceConfiguration:
+  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
+  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
+  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
+  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
+  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
