--- a/120-ng-manager/config.yml
+++ b/120-ng-manager/config.yml
@@ -551,3 +551,9 @@ webhookBranchHookEventHsqsDequeueConfig:
 
 useQueueServiceForWebhookTriggers: ${USE_QUEUE_SERVICE_FOR_WEBHOOK_TRIGGERS:-false}
 
+streamPerServiceConfiguration:
+  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
+  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
+  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
+  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
+  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
