--- a/idp-service/config/config.yml
+++ b/idp-service/config/config.yml
@@ -213,3 +213,10 @@ pipelineServiceClientConfig:
   baseUrl: http://localhost:12001/api/
   connectTimeOutSeconds: 15
   readTimeOutSeconds: 15
+
+streamPerServiceConfiguration:
+  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-false}
+  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
+  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
+  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
+  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
