--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -665,3 +665,10 @@ webhookEventHsqsDequeueConfig:
   threadSleepTimeInMillis: ${WEBHOOK_EVENT_DEQUE_THREAD_SLEEP_TIME_IN_MILLIS:-30}
 
 useQueueServiceForWebhookTriggers: ${USE_QUEUE_SERVICE_FOR_WEBHOOK_TRIGGERS:-false}
+
+streamPerServiceConfiguration:
+  migrateNodeStart: ${PIE_MIGRATE_NODE_START:-true}
+  migrateNodeResume: ${PIE_MIGRATE_NODE_RESUME:-false}
+  migrateFacilitator: ${PIE_MIGRATE_FACILITATOR:-false}
+  migrateNodeProgress:  ${PIE_MIGRATE_PROGRESS:-false}
+  migrateInterrupt: ${PIE_MIGRATE_INTERRUPT:-false}
