--- a/pipeline-service/config/config.yml
+++ b/pipeline-service/config/config.yml
@@ -50,6 +50,22 @@ orchestrationPoolConfig:
   idleTime: ${ORCHESTRATION_POOL_IDLE_TIME:-500}
   timeUnit: ${ORCHESTRATION_POOL_IDLE_TIME_TIME_UNIT:-SECONDS}
 
+initiateNodePoolConfig:
+  corePoolSize: ${INITIATE_NODE_POOL_CORE_SIZE:-20}
+  maxPoolSize: ${INITIATE_NODE_POOL_MAX_SIZE:-100}
+  idleTime: ${INITIATE_NODE_POOL_IDLE_TIME:-500}
+  timeUnit: ${INITIATE_NODE_POOL_IDLE_TIME_TIME_UNIT:-SECONDS}
+
+initiateNodeQueueSize: ${INITIATE_NODE_QUEUE_SIZE:-20}
+
+sdkResponseHandlerPoolConfig:
+    corePoolSize: ${SDK_RESPONSE_HANDLER_POOL_CORE_SIZE:-20}
+    maxPoolSize: ${SDK_RESPONSE_HANDLER_POOL_MAX_SIZE:-100}
+    idleTime: ${SDK_RESPONSE_HANDLER_POOL_IDLE_TIME:-500}
+    timeUnit: ${SDK_RESPONSE_HANDLER_POOL_IDLE_TIME_TIME_UNIT:-SECONDS}
+
+sdkResponseHandlerQueueSize: ${SDK_RESPONSE_HANDLER_QUEUE_SIZE:-40}
+
 pmsSdkExecutionPoolConfig:
   corePoolSize: ${PMS_SDK_EXECUTION_POOL_CORE_SIZE:-20}
   maxPoolSize: ${PMS_SDK_EXECUTION_POOL_MAX_SIZE:-100}
@@ -611,7 +627,7 @@ eventsFrameworkSnapshotDebezium:
       CATrustStorePath: "/tmp/ca_trust_store"
       CATrustStorePassword: ""
 
-disableFreezeNotificationTemplate: ${DISABLE_FREEZE_NOTIFY_TEMPLATE:-false}
+disableFreezeNotificationTemplate: ${DISABLE_FREEZE_NOTIFY_TEMPLATE:-true}
 
 cfClientConfig:
   apiKey: ""
