--- a/access-control/config/manifest.yaml
+++ b/access-control/config/manifest.yaml
@@ -1,3 +1,6 @@
 DOCKER_FILE_PATH: /harness/harness-core/access-control/build/container/Dockerfile-accesscontrol-service-multistage
 CONTEXT_PATH: /harness/harness-core
 HELM_CHART_SOURCE_DIRECTORY: harness-core/access-control/chart
+DOCKERARGS:
+  - ARG1: abc
+  - ARG2: xyz
