[fix]: [SMP-1850]: sync delegate-proxy helm chart changes to default branch

--- a/charts/delegate-proxy/values.yaml
+++ b/charts/delegate-proxy/values.yaml
@@ -15,7 +15,7 @@ image:
   repository: harness/delegate-proxy-signed
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "79712_3"
+  tag: "80104"
   digest: ""
   imagePullSecrets: []
 
